--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/mapbox-gl": "^1.10.2",
     "@types/node": "^12.12.44",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "antd": "^4.3.1",
+    "axios": "^0.19.2",
+    "mapbox-gl": "^1.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-mapbox-gl": "^4.8.6",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   },
