--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
         "@types/node": "^12.12.44",
         "@types/react": "^16.9.35",
         "@types/react-dom": "^16.9.8",
+        "@types/react-redux": "^7.1.9",
         "antd": "^4.3.1",
         "axios": "^0.19.2",
         "dotenv": "^8.2.0",
         "env-cmd": "^10.1.0",
+        "firebase": "^7.15.0",
         "mapbox-gl": "^1.10.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-google-button": "^0.7.1",
         "react-mapbox-gl": "^4.8.6",
+        "react-redux": "^7.2.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
+        "redux": "^4.0.5",
+        "redux-saga": "^1.1.3",
+        "redux-thunk": "^2.3.0",
         "typescript": "^3.7.5"
     },
     "scripts": {
