--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react": "^16.9.35",
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
+        "@types/react-typing-animation": "^1.6.2",
         "antd": "^4.3.1",
         "axios": "^0.19.2",
         "dotenv": "^8.2.0",
@@ -25,6 +26,7 @@
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
+        "react-typing-animation": "^1.6.2",
         "redux": "^4.0.5",
         "redux-saga": "^1.1.3",
         "redux-thunk": "^2.3.0",
