--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "@types/react": "^16.9.35",
         "@types/react-dom": "^16.9.8",
         "@types/react-redux": "^7.1.9",
+        "@types/react-router": "^5.1.7",
+        "@types/react-router-dom": "^5.1.5",
         "@types/react-typing-animation": "^1.6.2",
+        "@types/slug": "^0.9.1",
         "antd": "^4.3.1",
         "axios": "^0.19.2",
         "dotenv": "^8.2.0",
@@ -24,12 +27,14 @@
         "react-google-button": "^0.7.1",
         "react-mapbox-gl": "^4.8.6",
         "react-redux": "^7.2.0",
+        "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
         "react-typing-animation": "^1.6.2",
         "redux": "^4.0.5",
         "redux-saga": "^1.1.3",
         "redux-thunk": "^2.3.0",
+        "slug": "^3.3.0",
         "typescript": "^3.7.5"
     },
     "scripts": {
