--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ant-design/icons": "^4.2.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
@@ -17,12 +18,15 @@
         "@types/react-typing-animation": "^1.6.2",
         "@types/slug": "^0.9.1",
         "antd": "^4.3.1",
+        "apollo-boost": "^0.4.9",
         "axios": "^0.19.2",
         "dotenv": "^8.2.0",
         "env-cmd": "^10.1.0",
         "firebase": "^7.15.0",
+        "graphql": "^15.1.0",
         "mapbox-gl": "^1.10.1",
         "react": "^16.13.1",
+        "react-apollo": "^3.1.5",
         "react-dom": "^16.13.1",
         "react-google-button": "^0.7.1",
         "react-mapbox-gl": "^4.8.6",
@@ -32,6 +36,7 @@
         "react-scripts": "3.4.1",
         "react-typing-animation": "^1.6.2",
         "redux": "^4.0.5",
+        "redux-persist": "^6.0.0",
         "redux-saga": "^1.1.3",
         "redux-thunk": "^2.3.0",
         "slug": "^3.3.0",
